--- a/alphablog/app/views/alpha_blogs/new.html.erb
+++ b/alphablog/app/views/alpha_blogs/new.html.erb
@@ -5,5 +5,5 @@
 <br>
 
 <div style="position: relative; left : 5pc; width : 30pc;">
-  <%= link_to "Back to alpha blogs", alpha_blogs_path %>
+  <%= link_to "Back to alpha blogs", alpha_blogs_path, class: "btn btn-outline-info" %>
 </div>
