--- a/alphablog/app/views/alpha_blogs/show.html.erb
+++ b/alphablog/app/views/alpha_blogs/show.html.erb
@@ -3,8 +3,7 @@
 <%= render @alpha_blog %>
 
 <div style="color : red; position: relative; left : 5pc; width : 30pc;">
-  <%= link_to "Edit this alpha blog", edit_alpha_blog_path(@alpha_blog) %> |
-  <%= link_to "Back to alpha blogs", alpha_blogs_path %>
-
-  <%= button_to "Destroy this alpha blog", @alpha_blog, method: :delete %>
+  <%= link_to "Edit this alpha blog", edit_alpha_blog_path(@alpha_blog) , class: "btn btn-outline-success" %> |
+  <%= link_to "Back to alpha blogs", alpha_blogs_path ,  class: "btn btn-outline-info" %>
+  <%= button_to "Destroy this alpha blog", @alpha_blog , class: "btn btn-outline-danger", method: :delete, data: {confirm: "Are you sure?"} %>
 </div>
