--- a/alphablog/app/views/alpha_blogs/show.html.erb
+++ b/alphablog/app/views/alpha_blogs/show.html.erb
@@ -1,9 +1,20 @@
 <p style="color: green"><%= notice %></p>
 
-<%= render @alpha_blog %>
+<div style="position : relative; left : 38pc;top : 22pc; color : green">
+    by <%= @alpha_blog.user.username if @alpha_blog.user %>
+</div>
 
-<div style="color : red; position: relative; left : 5pc; width : 30pc;">
+<div style="position: relative; left : 20pc; top : 10pc; width : 50pc; height : 5pc;">
+
+    <%= @alpha_blog.description if @alpha_blog.description %>
+</div>
+
+
+<div style="position: relative; left : 20pc; top : 10pc; width : 50pc; height : 5pc;">
   <%= link_to "Edit this alpha blog", edit_alpha_blog_path(@alpha_blog) , class: "btn btn-outline-success" %> |
   <%= link_to "Back to alpha blogs", alpha_blogs_path ,  class: "btn btn-outline-info" %>
-  <%= button_to "Destroy this alpha blog", @alpha_blog , class: "btn btn-outline-danger", method: :delete, data: {confirm: "Are you sure?"} %>
+</div>
+
+<div style="position: relative; left : 20pc; top : 10pc; width : 50pc; height : 5pc;">
+    <%= button_to "Destroy this alpha blog", @alpha_blog , class: "btn btn-outline-danger", method: :delete, data: {confirm: "Are you sure?"} %>
 </div>
