--- a/alphablog/app/views/pages/home.html.erb
+++ b/alphablog/app/views/pages/home.html.erb
@@ -1,2 +1,7 @@
+<p style="color: green"><%= notice %></p>
 
-
+<div style="position : relative; left : 5pc; width : 30pc; font-size : x-large; top : 15pc; color : red"> Welcome AlphaBlog community </div>
+<div style="position : relative; left : 10pc; width : 30pc; top : 18pc;">
+    <%= link_to "Sign up!", signup_path, class: "btn btn-success btn-md" %>
+    <%= link_to "Login", login_path , class: "btn btn-outline-info btn-md" %>
+</div>
