--- a/alphablog/app/views/users/_form.html.erb
+++ b/alphablog/app/views/users/_form.html.erb
@@ -28,7 +28,7 @@
       <%= form.password_field :password %>
     </div>
 
-  <div style="position : relative; left : 5pc; width : 30pc;">
-      <%= form.submit(@user.new_record? ? "Sign up" : "Update account", class: "btn btn-outline-success btn-lg") %>
+  <div style="position : relative; left : 5pc; top : 1pc; width : 30pc;">
+      <%= form.submit(@user.new_record? ? "Sign up" : "Update account", class: "btn btn-outline-success btn-md") %>
   </div>
 <% end %>
