--- a/alphablog/app/views/users/_user.html.erb
+++ b/alphablog/app/views/users/_user.html.erb
@@ -1,2 +1,12 @@
 <div id="<%= dom_id user %>">
+<div class="card text-center shadow mb-5 bg-white rounded">
+<div class="card-header font-italic">
+  <% if user.username %>
+      by <%= link_to user.username, user_path(user) %>
+  <% end %>
+</div>
+<div class="card-body">
+  <h5 class="card-title"><%= link_to user.username, user_path(user), class: "text-success" %></h5>
+</div>
+</div>
 </div>
