--- a/alphablog/app/views/users/show.html.erb
+++ b/alphablog/app/views/users/show.html.erb
@@ -1,31 +1,29 @@
 <p style="color: green"><%= notice %></p>
 
-<div style="position: relative; left : 5pc; width : 30pc;">
-    <%= render @user ,  class: "btn btn-outline-info" %>
-</div>
-
 <h1 style="color : red; position : relative ; left : 5pc"> Users</h1>
 
-<div id="users" style="position : relative; left : -30pc;top : 5pc; width : 30pc">
-  <div class="card text-center shadow mb-5 bg-white rounded">
-  <div class="card-header font-italic">
-      <%= @user.username if @user %>
-  </div>
-  <div class="card-body">
-    <h5 class="card-title">
-      <%= @user.email if @user %>
-    </h5>
-    <p class="card-text"><%= pluralize(@user.alpha_blog.count, " My activity !") %></p>
-          <%= link_to "View profile", @user, class: "btn btn-outline-success" %>
-          <%= link_to "Edit profile", edit_user_path(@user), class: "btn btn-outline-info" %>
-        </div>
+<div class="flickr_pagination">
+  <%= will_paginate @users, :container => false %>
+</div>
+
+<div id="users" style="position : relative; left : -30pc;top : 5pc; width : 30pc">  
+  <%= @users.each do |blogs| %> 
+  <div class="card text-center">
+    <div class="card-header font-italic">
+        <%= blogs.username if blogs.username %>
+    </div>
+    <div class="card-body">
+      <h5 class="card-title">
+        <%= blogs.email if blogs.email %>
+      </h5>
+      <p class="card-text"> <%pluralize(blogs.alpha_blogs.count, " My activity !", "alpha_blog") %></p>
         <div class="card-footer text-muted">
-          <small>Joined <%= time_ago_in_words(@user.created_at) %> ago</small>
+            <small>Joined <%= time_ago_in_words(blogs.created_at) %> ago</small>
         </div>
-    </p>
+      </p>
+    </div>
   </div>
+  <% end %>
   </div>
-  <div>
 
 
-  <%= link_to "Logout", logout_path, class: "btn btn-outline-success", method: :delete %>
